FIX: Added more base CSS layout styling before jQuery Layout kicks in to prevent screen "jumping" [t25991]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@16784 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@ select {font-size:1em; height:1.8rem;}
 
 /*Create Base font for relative sizing*/
 html {height:100%;-webkit-text-size-adjust: 100%;}
-body {width:100%;height:100%; margin:0;padding:0;font-size:15px;text-align: center; line-height: 1.4;}
+body {width:100%;height:100%; margin:0;padding:0;font-size:15px;text-align: center; line-height: 1.4; overflow: hidden;}
 
 .ui-dialog .ui-dialog-buttonpane {text-align: center;}
 .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset {float: none;}
@@ -189,7 +189,7 @@ select::-ms-expand
 
 /*General layout*/
 
-#Header {padding: 5px 25px 5px 25px;margin:0;margin-bottom:10px;text-align:left;background-image:none;display: block !important;}
+#Header {padding: 5px 25px 5px 25px;margin:0;text-align:left;background-image:none;display: block !important;}
 #TextHeader{font-size:25px;float:left;}
 #TextHeader a {text-decoration:none;}
 #TextDesc{font-size:1em;float:left;display:block;clear:left;}
@@ -273,6 +273,11 @@ div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 #FooterNavLeft {float:left;text-align:left;margin-top: 10px;}
 #FooterLanguages{margin-left:15px;}
 #login_box #Footer {margin: 0 0 10px 0;}
+
+#UICenter {
+    width: calc(100% - 295px - 30px);
+    margin-left: 30px;
+}
 
 #CentralSpaceContainer {
     margin:0 15px 20px;
@@ -372,6 +377,7 @@ div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 #CentralSpace .ChosenDateRangeYear {width:100px !important;}
 
 /*Right Search Box layout*/
+#SearchBarContainer {height: 100%; float: right;}
 #SearchBox {float: right; width: 295px;text-align:left; height: inherit; overflow-x: hidden;}
 #SearchBoxPanel {width: inherit;}
 #ResearchBoxPanel {width: 100%;margin-top: 15px;}
@@ -673,6 +679,7 @@ table.TableArray:not(:first-of-type) {margin-top: 5px;}
 
 .BreadcrumbsBox .HelpLink {
     vertical-align: unset;
+    font-size: 15px;
 }
 
 /* Autocomplete dropdown CSS */
